--- a/.github/workflows/sync-external-services-ip-sets.yml
+++ b/.github/workflows/sync-external-services-ip-sets.yml
@@ -1,6 +1,7 @@
 name: sync-external-services-ip-sets
 
 on:
+  push:
   workflow_dispatch: # Allow manual trigger
     inputs:
       private_branch:
