PLT-1060 security group sync workflow (#229)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-1060

## 🛠 Changes

Added sync-security-groups workflow. Also made a small fix on
sync-external-services-ip-sets.

## ℹ️ Context

This workflow should allow us to sync rules on security groups from
CIDRs in cdap-private. Currently syncs zscaler-private and
zscaler-public.

## 🧪 Validation

Successful workflow runs at
https://github.com/CMSgov/ab2d-bcda-dpc-platform/actions/runs/15073061359
and
https://github.com/CMSgov/ab2d-bcda-dpc-platform/actions/runs/15073825193.
Security groups checked and all rules are present.

--- a/.github/workflows/sync-security-groups.yml
+++ b/.github/workflows/sync-security-groups.yml
@@ -1,4 +1,4 @@
-name: sync-external-services-ip-sets
+name: sync-security-groups
 
 on:
   workflow_dispatch: # Allow manual trigger
@@ -22,7 +22,7 @@ jobs:
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     strategy:
       fail-fast: false
-      matrix: # Only one per account
+      matrix: # Only run once per account
         app: [bcda]
         env: [test, prod]
     steps:
@@ -44,7 +44,7 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - name: Run IP set sync script
+      - name: Run script to sync security groups
         run: |
-          scripts/sync-ip-set --name=external-services --scope=REGIONAL cidr/cdap-mgmt.txt cidr/new-relic.txt cidr/zscaler-public.txt
-          scripts/sync-ip-set --name=external-services --scope=CLOUDFRONT cidr/cdap-mgmt.txt cidr/new-relic.txt cidr/zscaler-public.txt
+          scripts/sync-security-groups zscaler-private
+          scripts/sync-security-groups zscaler-public
