--- a/.github/workflows/tf-bucket-access-logs.yml
+++ b/.github/workflows/tf-bucket-access-logs.yml
@@ -1,5 +1,5 @@
 name: tf-bucket-access-logs
-run-name: tf-bucket-access-logs ${{ inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main') && 'apply' || 'plan' }}
+run-name: tf-bucket-access-logs ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
 
 on:
   push:
