Extend tf-api-rds workflow to other environments

--- a/.github/workflows/tf-api-rds.yml
+++ b/.github/workflows/tf-api-rds.yml
@@ -34,12 +34,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
-        env: [dev]
-        include:
-          - app: bcda
-            env: test
-          - app: dpc
-            env: test
+        env: [dev, test, sandbox, prod]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
