--- a/.github/workflows/tf-tfstate.yml
+++ b/.github/workflows/tf-tfstate.yml
@@ -47,5 +47,9 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}-gf.s3.tfbackend
       - run: terraform plan -out=tf.plan
+        env:
+          TF_VAR_app: ${{ matrix.app }}
+          TF_VAR_env: ${{ matrix.env }}
+          TF_VAR_legacy: "false"
       - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: terraform apply -auto-approve tf.plan
