remove dpc prod from api-waf-sync lambda terraform

--- a/.github/workflows/tf-api-waf-sync.yml
+++ b/.github/workflows/tf-api-waf-sync.yml
@@ -40,6 +40,9 @@ jobs:
       matrix:
         app: [bcda, dpc]
         env: [dev, test, prod]
+        exclude:
+          - app: dpc
+            env: prod
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
