--- a/.github/workflows/tf-opt-out-export.yml
+++ b/.github/workflows/tf-opt-out-export.yml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d, bcda, dpc]
+        app: [bcda, dpc]
         env: [dev, test, prod]
     steps:
       - uses: actions/checkout@v4
