--- a/.github/workflows/tf-alarm-to-slack.yml
+++ b/.github/workflows/tf-alarm-to-slack.yml
@@ -43,6 +43,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
+          pip install pylint
+          pylint lambda_src
           pip install pytest
           pytest lambda_src
       - uses: ./actions/setup-tfenv-terraform
