--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -21,7 +21,7 @@ content: |-
     {{- $warning }}
     {{ .Providers }}
 
-    {{- $warning }}
+    {{ $warning }}
     {{ .Requirements }}
 
     {{ $warning }}
