--- a/.github/workflows/tf-opt-out-import.yml
+++ b/.github/workflows/tf-opt-out-import.yml
@@ -1,17 +1,17 @@
-name: tf-opt-out-import
-run-name: tf-opt-out-import ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
+name: tf-opt-out-import-cluster
+run-name: tf-opt-out-import-cluster ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
 
 on:
   push:
     paths:
-      - .github/workflows/tf-opt-out-import.yml
+      - .github/workflows/tf-opt-out-import-cluster.yml
       - terraform/modules/bucket/**
       - terraform/modules/key/**
       - terraform/modules/function/**
       - terraform/modules/queue/**
       - terraform/modules/subnets/**
       - terraform/modules/vpc/**
-      - terraform/services/opt-out-import/**
+      - terraform/services/opt-out-import-cluster/**
   workflow_dispatch:
     inputs:
       apply:
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/opt-out-import
+      - run: terraform fmt -check -diff -recursive terraform/services/opt-out-import-cluster
 
   plan-apply:
     needs: check-fmt
@@ -34,12 +34,12 @@ jobs:
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     defaults:
       run:
-        working-directory: ./terraform/services/opt-out-import
+        working-directory: ./terraform/services/opt-out-import-cluster
     strategy:
       fail-fast: false
       matrix:
-        app: [bcda, dpc]
-        env: [dev, test, prod]
+        app: [dpc]
+        env: [test]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
