Removing DPC test from matrix as well.

--- a/.github/workflows/tf-api-rds.yml
+++ b/.github/workflows/tf-api-rds.yml
@@ -34,7 +34,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [dpc]
-        env: [dev, test, sandbox, prod]
+        env: [dev, sandbox, prod]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
