--- a/.github/workflows/tf-opt-out-export.yml
+++ b/.github/workflows/tf-opt-out-export.yml
@@ -1,17 +1,17 @@
-name: tf-opt-out-export-cluster
-run-name: tf-opt-out-export-cluster ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
+name: tf-opt-out-export
+run-name: tf-opt-out-export ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
 
 on:
   push:
     paths:
-      - .github/workflows/tf-opt-out-export-cluster.yml
+      - .github/workflows/tf-opt-out-export.yml
       - terraform/modules/bucket/**
       - terraform/modules/key/**
       - terraform/modules/function/**
       - terraform/modules/queue/**
       - terraform/modules/subnets/**
       - terraform/modules/vpc/**
-      - terraform/services/opt-out-export-cluster/**
+      - terraform/services/opt-out-export/**
   workflow_dispatch:
     inputs:
       apply:
@@ -24,9 +24,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/opt-out-export-cluster
+      - run: terraform fmt -check -diff -recursive terraform/services/opt-out-export
 
-  plan-apply:
+  plan-apply-dpc:
     needs: check-fmt
     permissions:
       contents: read
@@ -34,23 +34,22 @@ jobs:
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     defaults:
       run:
-        working-directory: ./terraform/services/opt-out-export-cluster
+        working-directory: ./terraform/services/opt-out-export
     strategy:
       fail-fast: false
       matrix:
-        app: [dpc]
         env: [test]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
+          role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/dpc-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}-gf.s3.tfbackend
+      - run: terraform init -backend-config=../../backends/dpc-${{ matrix.env }}-gf.s3.tfbackend
       - run: terraform plan -out=tf.plan
         env:
-          TF_VAR_app: ${{ matrix.app }}
+          TF_VAR_app: dpc
           TF_VAR_env: ${{ matrix.env }}
       - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: terraform apply -auto-approve tf.plan
