--- a/.github/workflows/tf-opt-out-export.yml
+++ b/.github/workflows/tf-opt-out-export.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: ./actions/setup-tfenv-terraform
       - run: terraform fmt -check -diff -recursive terraform/services/opt-out-export
 
-  plan-apply-dpc:
+  plan-apply:
     needs: check-fmt
     permissions:
       contents: read
@@ -38,18 +38,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        app: [dpc]
         env: [test]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/dpc-${{ matrix.env }}-github-actions
+          role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/dpc-${{ matrix.env }}-gf.s3.tfbackend
+      - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}-gf.s3.tfbackend
       - run: terraform plan -out=tf.plan
         env:
-          TF_VAR_app: dpc
+          TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
       - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: terraform apply -auto-approve tf.plan
