--- a/.github/workflows/tf-alarm-to-slack.yml
+++ b/.github/workflows/tf-alarm-to-slack.yml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          pip install pylint pytest
+          pip install pylint pytest moto boto3
           pylint lambda_src
           pytest lambda_src
       - uses: ./actions/setup-tfenv-terraform
