fix pylint directory

--- a/.github/workflows/tf-alarm-to-slack.yml
+++ b/.github/workflows/tf-alarm-to-slack.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install Python dependencies & Run Lint and Unit Tests
         run: |
           pip install pylint pytest
-          pylint lambda_src
-          pytest lambda_src
+          pylint terraform/services/alarm-to-slack/lambda_src
+          pytest terraform/services/alarm-to-slack/lambda_src
 
   check-fmt:
     needs: python-lint-test
