PLT-1226: Extend alarm-to-slack service to cover all applications (#278)
## 🎫 Ticket

https://jira.cms.gov/browse/PLT-1226

## 🛠 Changes

alarm-to-slack service was extended to cover all applications

## ℹ️ Context

the is the need for one instance of the alarm-to-slack function in each
account should be able to handle routing of alarms to Slack for all
applications and environments.

<!-- If any of the following security implications apply, this PR must
not be merged without Stephen Walter's approval. Explain in this section
and add @SJWalter11 as a reviewer.
  - Adds a new software dependency or dependencies.
  - Modifies or invalidates one or more of our security controls.
  - Stores or transmits data that was not stored or transmitted before.
- Requires additional review of security implications for other reasons.
-->

## 🧪 Validation

see checks

---------

Co-authored-by: Maboh Christopher <chris.maboh@aquia.io>

--- a/.github/workflows/tf-alarm-to-slack.yml
+++ b/.github/workflows/tf-alarm-to-slack.yml
@@ -19,7 +19,18 @@ on:
         type: boolean
 
 jobs:
+  python-lint-test:
+    runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Python dependencies & Run Lint and Unit Tests
+        run: |
+          pip install pylint pytest
+          pylint terraform/services/alarm-to-slack/lambda_src
+          pytest terraform/services/alarm-to-slack/lambda_src
+
   check-fmt:
+    needs: python-lint-test
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     steps:
       - uses: actions/checkout@v4
@@ -38,15 +49,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [dpc]
-        env: [dev, test, sandbox, prod]
+        app: [bcda]
+        env: [test, prod]
     steps:
       - uses: actions/checkout@v4
-      - run: |
-          pip install pylint pytest
-          pylint lambda_src
-          pytest lambda_src
+
       - uses: ./actions/setup-tfenv-terraform
+
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
