--- a/.github/workflows/tf-bucket-access-logs.yml
+++ b/.github/workflows/tf-bucket-access-logs.yml
@@ -17,8 +17,8 @@ jobs:
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     steps:
       - uses: actions/checkout@v4
-      - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/bucket-access-logs
+      - uses: ./actions/setup-tenv
+      - run: tofu fmt -check -diff -recursive terraform/services/bucket-access-logs
 
   plan-apply:
     needs: check-fmt
@@ -36,12 +36,12 @@ jobs:
         env: [test, prod]
     steps:
       - uses: actions/checkout@v4
-      - uses: ./actions/setup-tfenv-terraform
+      - uses: ./actions/setup-tenv
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - run: terraform plan -out=tf.plan
+      - run: tofu init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
+      - run: tofu plan -out=tf.plan
       - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
-        run: terraform apply -auto-approve tf.plan
+        run: tofu apply -auto-approve tf.plan
