Switch fmt check to working directory

--- a/.github/workflows/tf-bucket-access-logs.yml
+++ b/.github/workflows/tf-bucket-access-logs.yml
@@ -19,7 +19,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159 # v3.9.2
       - uses: ./actions/setup-tenv
-      - run: tofu fmt -check -diff -recursive terraform/services/bucket-access-logs
+      - working-directory: ./terraform/services/bucket-access-logs
+        run: tofu fmt -check -diff -recursive .
 
   plan-apply:
     needs: check-fmt
