Drop install check

--- a/actions/setup-tenv/action.yml
+++ b/actions/setup-tenv/action.yml
@@ -5,56 +5,53 @@ runs:
   steps:
     - shell: bash
       run: |
-        if 2>&1 tenv version > /dev/null; then
-          echo "tenv already installed, skipping"
-        else
-          VERSION=v4.7.6
-          TMPDIR=$(mktemp -d)
-          cd $TMPDIR
-          curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_checksums.txt
-          curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_Linux_x86_64.tar.gz
+        VERSION=v4.7.6
+        TMPDIR=$(mktemp -d)
+        cd $TMPDIR
+        curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_checksums.txt
+        curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_Linux_x86_64.tar.gz
 
-          if 2>&1 cosign version > /dev/null; then
-            curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_checksums.txt.sig
-            curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_checksums.txt.pem
-            curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_Linux_x86_64.tar.gz.sig
-            curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_Linux_x86_64.tar.gz.pem
-            cosign \
-              verify-blob \
-              --certificate-identity "https://github.com/tofuutils/tenv/.github/workflows/release.yml@refs/tags/${VERSION}" \
-              --signature "tenv_${VERSION}_checksums.txt.sig" \
-              --certificate "tenv_${VERSION}_checksums.txt.pem" \
-              --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
-              "tenv_${VERSION}_checksums.txt"
-            TENV_SIG_CHECK=$?
-            cosign \
-              verify-blob \
-              --certificate-identity "https://github.com/tofuutils/tenv/.github/workflows/release.yml@refs/tags/${VERSION}" \
-              --signature "tenv_${VERSION}_Linux_x86_64.tar.gz.sig" \
-              --certificate "tenv_${VERSION}_Linux_x86_64.tar.gz.pem" \
-              --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
-              "tenv_${VERSION}_Linux_x86_64.tar.gz"
-            TENV_ASSET_CHECK=$?
-            if [ "$TENV_SIG_CHECK" -eq "0" ] && [ "$TENV_ASSET_CHECK" -eq "0" ]; then
-              echo "signatures verified"
-            else
-              echo "signature verification failed"
-              exit 1
-            fi
+        if cosign version > /dev/null; then
+          curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_checksums.txt.sig
+          curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_checksums.txt.pem
+          curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_Linux_x86_64.tar.gz.sig
+          curl -SsLO https://github.com/tofuutils/tenv/releases/download/${VERSION}/tenv_${VERSION}_Linux_x86_64.tar.gz.pem
+          cosign \
+            verify-blob \
+            --certificate-identity "https://github.com/tofuutils/tenv/.github/workflows/release.yml@refs/tags/${VERSION}" \
+            --signature "tenv_${VERSION}_checksums.txt.sig" \
+            --certificate "tenv_${VERSION}_checksums.txt.pem" \
+            --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
+            "tenv_${VERSION}_checksums.txt"
+          TENV_SIG_CHECK=$?
+          cosign \
+            verify-blob \
+            --certificate-identity "https://github.com/tofuutils/tenv/.github/workflows/release.yml@refs/tags/${VERSION}" \
+            --signature "tenv_${VERSION}_Linux_x86_64.tar.gz.sig" \
+            --certificate "tenv_${VERSION}_Linux_x86_64.tar.gz.pem" \
+            --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
+            "tenv_${VERSION}_Linux_x86_64.tar.gz"
+          TENV_ASSET_CHECK=$?
+          if [ "$TENV_SIG_CHECK" -eq "0" ] && [ "$TENV_ASSET_CHECK" -eq "0" ]; then
+            echo "signatures verified"
           else
-            echo "install cosign for signature verification"
-          fi
-
-          if shasum -a 256 -c "tenv_${VERSION}_checksums.txt" --ignore-missing; then
-            tar xf tenv_${VERSION}_Linux_x86_64.tar.gz
-            rm tenv_${VERSION}_Linux_x86_64.tar.gz
-            cd - > /dev/null
-            mv $TMPDIR $HOME/.tenv
-            echo "PATH=$HOME/.tenv:$PATH" >> "$GITHUB_ENV"
-            echo "TENV_AUTO_INSTALL=true" >> "$GITHUB_ENV"
-            echo "tenv installed"
-          else
-            echo "checksum check failed"
+            echo "signature verification failed"
             exit 1
           fi
+        else
+          echo "install cosign for signature verification"
+        fi
+
+        if shasum -a 256 -c "tenv_${VERSION}_checksums.txt" --ignore-missing; then
+          echo "checksums checked, installing tenv"
+          tar xf tenv_${VERSION}_Linux_x86_64.tar.gz
+          rm tenv_${VERSION}_Linux_x86_64.tar.gz
+          cd - > /dev/null
+          mv $TMPDIR $HOME/.tenv
+          echo "PATH=$HOME/.tenv:$PATH" >> "$GITHUB_ENV"
+          echo "TENV_AUTO_INSTALL=true" >> "$GITHUB_ENV"
+          echo "tenv installed"
+        else
+          echo "checksum check failed"
+          exit 1
         fi
