# This is a combination of 25 commits. # This is the 1st commit message:
added tags

# This is the commit message #2:

PLT-1282: Update bucket module to use shared KMS keys (#295)

## 🎫 Ticket

https://jira.cms.gov/browse/PLT-1282

## 🛠 Changes

bucket module was updated to use our shared kms keys

## ℹ️ Context

The bucket module currently creates KMS keys for encrypting and
decrypting tfstate buckets, the is the need to switch to the shared keys
created by the kms-keys service

<!-- If any of the following security implications apply, this PR must
not be merged without Stephen Walter's approval. Explain in this section
and add @SJWalter11 as a reviewer.
  - Adds a new software dependency or dependencies.
  - Modifies or invalidates one or more of our security controls.
  - Stores or transmits data that was not stored or transmitted before.
- Requires additional review of security implications for other reasons.
-->

## 🧪 Validation

See checks

---------

Co-authored-by: Maboh Christopher <chris.maboh@aquia.io>
# This is the commit message #3:

added clusterid

# This is the commit message #4:

remove extra line

# This is the commit message #5:

PLT-1282: add cdap app and env in bucket module (#299)

## 🎫 Ticket

https://jira.cms.gov/browse/PLT-1282

## 🛠 Changes
CDAP env and app added to bucket module variables.tf

## ℹ️ Context

workflow terraform apply failed with is error message
Planning failed. Terraform encountered an error while generating this
plan.

╷
│ Error: Invalid value for variable
│ 
│   on main.tf line 9, in module "tfstate_bucket":
│    9:   app = var.app
│     ├────────────────
│     │ var.app is "cdap"
│ 
│ Valid value for app is ab2d, bcda, or dpc.
│ 
│ This was checked by the validation rule at
│ ../../modules/bucket/variables.tf:4,3-13.
╵
╷
│ Error: Invalid value for variable
│ 
│   on main.tf line 10, in module "tfstate_bucket":
│   10:   env = var.env
│     ├────────────────
│     │ var.env is "mgmt"
│ 
│ Valid value for env is dev, test,

--- a/.github/workflows/tf-opt-out-export.yml
+++ b/.github/workflows/tf-opt-out-export.yml
@@ -39,9 +39,9 @@ jobs:
       fail-fast: false
       matrix:
         app: [bcda, dpc]
-        env: [test]
+        env: [test, dev]
         include:
-          - env: dev
+          - env: prod
             app: bcda
     steps:
       - uses: actions/checkout@v4
