--- a/.github/workflows/tf-backup-plan.yml
+++ b/.github/workflows/tf-backup-plan.yml
@@ -1,22 +1,17 @@
-name: tf-opt-out-import
-run-name: tf-opt-out-import ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
+name: tf-backup-plan
+run-name: tf-backup-plan ${{ (inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'apply' || 'plan' }}
 
 on:
   push:
     paths:
-      - .github/workflows/tf-opt-out-import.yml
-      - terraform/modules/bucket/**
-      - terraform/modules/key/**
-      - terraform/modules/function/**
-      - terraform/modules/queue/**
-      - terraform/modules/subnets/**
-      - terraform/modules/vpc/**
-      - terraform/services/opt-out-import/**
+      - .github/workflows/tf-backup-plan.yml
+      - terraform/services/backup-plan/**
   workflow_dispatch:
     inputs:
       apply:
         required: false
         type: boolean
+        description: "Apply the terraform?"
 
 jobs:
   check-fmt:
@@ -24,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/opt-out-import
+      - run: terraform fmt -check -diff -recursive terraform/services/backup-plan
 
   plan-apply:
     needs: check-fmt
@@ -34,15 +29,12 @@ jobs:
     runs-on: codebuild-cdap-${{github.run_id}}-${{github.run_attempt}}
     defaults:
       run:
-        working-directory: ./terraform/services/opt-out-import
+        working-directory: ./terraform/services/backup-plan
     strategy:
       fail-fast: false
       matrix:
-        app: [bcda, dpc]
-        env: [test, dev]
-        include:
-          - env: prod
-            app: bcda
+        app: [bcda]
+        env: [test, prod]
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
