--- a/.github/workflows/tf-admin-create-aco-creds.yml
+++ b/.github/workflows/tf-admin-create-aco-creds.yml
@@ -17,6 +17,10 @@ on:
       apply:
         required: false
         type: boolean
+
+env:
+  TENV_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
 defaults:
   run:
     working-directory: ./terraform/services/admin-create-aco-creds
