--- a/.github/workflows/tf-kms-keys.yml
+++ b/.github/workflows/tf-kms-keys.yml
@@ -13,6 +13,9 @@ on:
         type: boolean
         description: "Apply the terraform?"
 
+env:
+  TENV_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 defaults:
   run:
     working-directory: ./terraform/services/kms-keys
